--- a/README
+++ b/README
@@ -1,7 +1,7 @@
 RTBench
 =======
 
-Industrial Real time micro benchmarks suit and runtime
+Industrial Real time micro benchmarks suite and runtime
 v0.32b
 
 Usage:
